--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,11 @@ margin:0; }
   justify-content: space-between;
   align-items: flex-end;
 }
+.error
+{
+  color:red;
+  font-style: italic;
+}
 .img-upload-title
 {
   margin-bottom:-1rem;
@@ -340,7 +345,7 @@ figure {
 
 .form-group {
   position: relative;
-  margin-bottom: 25px;
+  margin-bottom: 1.4rem;
   overflow: hidden; }
   .form-group:last-child {
     margin-bottom: 0px; }
