--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,9 @@ figure {
   margin-left: 75px;
   margin-right: 75px;
   padding-left: 34px; }
-
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 30px white inset;
+}
 .register-form {
   width: 100%; }
 
