--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ figure {
   display: inline-block;
   background: #6dabe4;
   color: #fff;
-  border-bottom: none;
+  border: none;
   width: auto;
   padding: 15px 39px;
   border-radius: 5px;
