--- a/css/showTheses.css
+++ b/css/showTheses.css
@@ -2,3 +2,27 @@
 {
     margin:auto;
 }
+.img-upload-div
+{
+  display:flex;
+  box-sizing: border-box;
+  flex-flow:row wrap;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.img-input
+{
+  padding-bottom:0;
+  background-color:transparent;
+  width:82% !important;
+}
+.img-upload
+{
+
+  background-color:#5d99c6;
+  border-radius:5px;
+  border:none;
+  color:white;
+  font-size:1.3rem;
+  width:15%;
+}
