--- a/css/showTheses.css
+++ b/css/showTheses.css
@@ -9,6 +9,7 @@
   flex-flow:row wrap;
   justify-content: space-between;
   align-items: flex-end;
+  margin-bottom: 1rem;
 }
 .img-input
 {
@@ -29,4 +30,8 @@
   color:white;
   font-size:1.3rem;
   width:15%;
+}
+input
+{
+  padding-left:0rem;
 }
