Adding transparency effect on crew card

--- a/css/crew.css
+++ b/css/crew.css
@@ -3,3 +3,7 @@ body
     background-image: url("../images/background.jpg");
     background-position: center;
 }
+.crew:hover
+{
+    opacity: .5;
+}
