Restyling a little bit update the background color

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -14,7 +14,7 @@ html,body
 {
    border-bottom: 1px solid rgb(220,220,220); 
     height: 4rem;
-    background-color: #5d99c6;
+    background-color: blue;
     display:flex;
     justify-content: flex-end;
     align-items: center;
@@ -35,7 +35,7 @@ html,body
 .sidebar
 {
     border-right: 1px solid rgb(220,220,220);
-    background-color: #5d99c6;
+    background-color: blue;
     padding:0 !important;
 } 
 .content
